--- a/03_LC_Schema.ipynb
+++ b/03_LC_Schema.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "mFFpbfTezUXu"
       },
@@ -33,28 +33,32 @@
       "source": [
         "%%capture\n",
         "# update or install the necessary libraries\n",
-        "!pip install --upgrade langchain langchain_community langchain_aws"
+        "!pip install --upgrade langchain langchain_community langchain_aws python-dotenv"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "PN-Tn7S-zRtO"
       },
       "outputs": [],
       "source": [
-        "import os\n",
         "from langchain_aws import ChatBedrock\n",
-        "from google.colab import userdata\n",
-        "os.environ[\"AWS_ACCESS_KEY_ID\"] = userdata.get('AWS_ACCESS_KEY_ID')\n",
-        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = userdata.get('AWS_SECRET_ACCESS_KEY')\n",
-        "os.environ[\"AWS_DEFAULT_REGION\"] = userdata.get('AWS_DEFAULT_REGION')"
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "\n",
+        "# Load environment variables from .env file\n",
+        "load_dotenv()\n",
+        "\n",
+        "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+        "os.environ[\"AWS_DEFAULT_REGION\"] = os.getenv(\"AWS_DEFAULT_REGION\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -63,21 +67,7 @@
         "id": "CjJN2uNAy7zP",
         "outputId": "da075ed2-6716-4432-f88b-4d0b77f32ea8"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'What day comes after Friday?'"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# You'll be working with simple strings as prompts(that'll soon grow in complexity!)\n",
         "my_text = \"What day comes after Friday?\"\n",
@@ -95,21 +85,7 @@
         "id": "ROZyFauUkh1U",
         "outputId": "ece40775-f3c9-4486-a05d-434a06eaa87f"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "' The day that comes after Friday is Saturday. In a weekly cycle, Friday is followed by Saturday.'"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from langchain.schema import HumanMessage\n",
         "chat = ChatBedrock(\n",
@@ -156,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -164,18 +140,10 @@
         "id": "SCNi-wrj0hsF",
         "outputId": "92e79e8e-4da0-4aea-c02d-ac5b4d91719a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            " Consider trying a fresh tomato salad or a caprese bruschetta for a delicious and satisfying meal.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Chat messages example\n",
-        "response = chat([\n",
+        "response = chat.invoke([\n",
         "    SystemMessage(content=\"You are a nice AI bot that helps a user figure out what to eat in one short sentence\"),\n",
         "    HumanMessage(content=\"I like tomatoes, what should I eat?\")\n",
         "])\n",
@@ -194,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -203,23 +171,9 @@
         "id": "IG_MQHiz02Gf",
         "outputId": "5e3aa5c3-bfd9-4638-ebe0-73410c89336a"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'\\nYou can also explore Old Town Nice, visit the famous Promenade des Anglais, and relax at Colline du Château for a beautiful view of the city and the sea. Enjoy your trip!'"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "response = chat(\n",
+        "response = chat.invoke(\n",
         "    [\n",
         "        SystemMessage(content=\"You are a nice AI bot that helps a user figure out where to travel in one short sentence\"),\n",
         "        HumanMessage(content=\"I like the beaches where should I go?\"),\n",
@@ -241,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -250,23 +204,9 @@
         "id": "xNJqFOUo1LbX",
         "outputId": "4a48adba-5db5-406b-ac12-80d2707f6143"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "' The day that comes after Thursday is Friday. In a seven-day cycle, Thursday is followed by Friday. This sequence holds true in all calendar systems, including the Gregorian calendar, which is the most widely used calendar system in the world today.'"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "response = chat(\n",
+        "response = chat.invoke(\n",
         "    [\n",
         "        HumanMessage(content=\"What day comes after Thursday?\")\n",
         "    ]\n",
@@ -297,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "qcwHNuao1aZW"
       },
@@ -313,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Z-0Gd4KXoUz3"
       },
@@ -325,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -334,21 +274,7 @@
         "id": "1vTNnNX3oZjm",
         "outputId": "5016c61c-c395-4f24-d4d5-bf4ad8429559"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "' The document is a personal document labeled as \"my document.\" It contains text that the owner has collected from various sources. There is no specific information or content provided in the document for summary.'"
-            ]
-          },
-          "execution_count": 36,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Get the response from the language model\n",
         "response = chat.invoke([HumanMessage(content=f\"Summarize the following document:\\n\\n{prompt}\")])\n",
@@ -366,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "WLVasVVM1ceF"
       },
@@ -377,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "8nRGsnjmos-1"
       },
@@ -389,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -398,21 +324,7 @@
         "id": "i_4SDqdso1Be",
         "outputId": "da9d704d-c13c-4125-be44-66574a2dfba5"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "' The document is a personal one, titled \"my document.\" Its content consists of text that the document owner has collected from various sources. There is no specific information or topic discussed in the document.'"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Get the response from the language model\n",
         "response = chat.invoke([HumanMessage(content=f\"Summarize the following document:\\n\\n{prompt1}\")])\n",
@@ -456,7 +368,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
