--- a/04_LC_Models.ipynb
+++ b/04_LC_Models.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FpcUiTJV5JMy"
       },
@@ -23,22 +23,26 @@
       "source": [
         "%%capture\n",
         "# update or install the necessary libraries\n",
-        "!pip install --upgrade langchain langchain_community langchain_aws langchain_openai"
+        "!pip install --upgrade langchain langchain_community langchain_aws langchain_openai python-dotenv"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "yc8ym6AS5ULU"
       },
       "outputs": [],
       "source": [
         "import os\n",
-        "from google.colab import userdata\n",
-        "os.environ[\"AWS_ACCESS_KEY_ID\"] = userdata.get('AWS_ACCESS_KEY_ID')\n",
-        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = userdata.get('AWS_SECRET_ACCESS_KEY')\n",
-        "os.environ[\"AWS_DEFAULT_REGION\"] = userdata.get('AWS_DEFAULT_REGION')"
+        "from dotenv import load_dotenv\n",
+        "\n",
+        "# Load environment variables from .env file\n",
+        "load_dotenv()\n",
+        "\n",
+        "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+        "os.environ[\"AWS_DEFAULT_REGION\"] = os.getenv(\"AWS_DEFAULT_REGION\")"
       ]
     },
     {
@@ -53,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "aUh4EWQn5oMW"
       },
@@ -70,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -79,21 +83,7 @@
         "id": "qEcTJq0_5rVf",
         "outputId": "3aca1a93-30cc-4448-e6d2-d82cb8736ac5"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'\\n\\nSunday\\n\\nExplanation:\\n\\nIn the seven-day cycle, Friday is followed by Saturday and then Sunday. So, the day that comes after Friday is Sunday. This is the standard answer for the question \"What day comes after Friday?\" However, it\\'s important to note that some cultures may have different naming conventions for their days of the week, so there could be slight variations in the order of the days. But in the vast majority of cases, the answer remains the same: Sunday follows Friday.'"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "llm.invoke(\"What day comes after Friday?\")"
       ]
@@ -110,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "JlnD-App6YXd"
       },
@@ -128,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -137,21 +127,7 @@
         "id": "ukOg4hnU7j_v",
         "outputId": "c7beb14c-78c7-4a8e-9577-35611117caad"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\" Well, here's a joke for you: Why don't they sell pencils in New York City? Because it's a pen-insula, get it? I'm here to make your day a little brighter with my wit and humor. But in all seriousness, to get to New York, you should probably book a flight or a train ticket, pack your bags, and make your travel arrangements. Have a nice trip!\""
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "response = chat.invoke(\n",
         "    [\n",
@@ -179,15 +155,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "MYPTJoApCgvU"
       },
       "outputs": [],
       "source": [
         "import os\n",
-        "from google.colab import userdata\n",
-        "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+        "from dotenv import load_dotenv\n",
+        "\n",
+        "# Load environment variables from .env file\n",
+        "load_dotenv()\n",
+        "\n",
+        "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\")"
       ]
     },
     {
@@ -216,18 +196,7 @@
         "id": "lSliTayHCgvU",
         "outputId": "c805f2cd-ca59-4a94-9ace-e755975a8923"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\"location\":\"Boston, MA\"}', 'name': 'get_current_weather'}, 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 89, 'total_tokens': 106, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_07871e2ad8', 'id': 'chatcmpl-BmJTiLnJRpG4dy26mmVE3M5ccJK1y', 'service_tier': 'default', 'finish_reason': 'function_call', 'logprobs': None}, id='run--66287ff8-aae3-4517-84f4-0112a953a1a1-0', usage_metadata={'input_tokens': 89, 'output_tokens': 17, 'total_tokens': 106, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from langchain_openai import ChatOpenAI\n",
         "\n",
@@ -307,16 +276,7 @@
         "id": "RujU35zb9Dfc",
         "outputId": "550eb936-986c-473e-ff98-cbd1fe1239b0"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Here's a sample: [-0.08459413796663284, 0.08340154588222504, 0.0055779931135475636, 0.0033058084081858397, 0.05176759138703346]...\n",
-            "Your embedding is length 1024\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "text_embedding = embeddings.embed_query(text)\n",
         "print (f\"Here's a sample: {text_embedding[:5]}...\")\n",
@@ -363,7 +323,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
