--- a/05_LC_PromptTemplate.ipynb
+++ b/05_LC_PromptTemplate.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "u-jFZNEETIKO",
       "metadata": {
         "id": "u-jFZNEETIKO"
@@ -37,12 +37,12 @@
       "source": [
         "%%capture\n",
         "# update or install the necessary libraries\n",
-        "!pip install --upgrade langchain langchain_community langchain_aws"
+        "!pip install --upgrade langchain langchain_community langchain_aws python-dotenv"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "d6e37738",
       "metadata": {
         "id": "d6e37738"
@@ -50,10 +50,14 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "from google.colab import userdata\n",
-        "os.environ[\"AWS_ACCESS_KEY_ID\"] = userdata.get('AWS_ACCESS_KEY_ID')\n",
-        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = userdata.get('AWS_SECRET_ACCESS_KEY')\n",
-        "os.environ[\"AWS_DEFAULT_REGION\"] = userdata.get('AWS_DEFAULT_REGION')"
+        "from dotenv import load_dotenv\n",
+        "\n",
+        "# Load environment variables from .env file\n",
+        "load_dotenv()\n",
+        "\n",
+        "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+        "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+        "os.environ[\"AWS_DEFAULT_REGION\"] = os.getenv(\"AWS_DEFAULT_REGION\")"
       ]
     },
     {
@@ -75,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "FFxW9RQfFClE",
       "metadata": {
         "colab": {
@@ -85,21 +89,7 @@
         "id": "FFxW9RQfFClE",
         "outputId": "59d38647-d60d-4d7a-a90f-58dd572c634e"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "' The statement \"Today is Monday, tomorrow is Wednesday\" is inconsistent because if today is Monday, then the next day (tomorrow) cannot be Wednesday without skipping over Tuesday. So the statement is incorrect.'"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "prompt = \"\"\"\n",
         "Today is Monday, tomorrow is Wednesday.\n",
@@ -129,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "84ad2b93",
       "metadata": {
         "id": "84ad2b93"
@@ -145,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "c56d37f3",
       "metadata": {
         "id": "c56d37f3"
@@ -160,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "014cd73e",
       "metadata": {
         "colab": {
@@ -169,25 +159,14 @@
         "id": "014cd73e",
         "outputId": "c1f9c52c-4020-4db0-e572-107318d4a1b4"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "PromptTemplate(input_variables=['style', 'text'], input_types={}, partial_variables={}, template='Translate the text that is delimited by triple backticks into a style that is {style}. text: ```{text}```\\n')"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "prompt_template.messages[0].prompt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "yBRDvJFgVelm",
       "metadata": {
         "colab": {
@@ -196,18 +175,7 @@
         "id": "yBRDvJFgVelm",
         "outputId": "9aedcfb4-c01f-4277-c419-499c3ee9a8a8"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['style', 'text']"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "prompt_template.messages[0].prompt.input_variables"
       ]
@@ -229,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "c2af340f",
       "metadata": {
         "id": "c2af340f"
@@ -243,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "444891fb",
       "metadata": {
         "id": "444891fb"
@@ -270,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "f36b2801",
       "metadata": {
         "id": "f36b2801"
@@ -284,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "a4dc09e3",
       "metadata": {
         "id": "a4dc09e3"
@@ -296,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "c93c6be1",
       "metadata": {
         "colab": {
@@ -307,21 +275,7 @@
         "id": "c93c6be1",
         "outputId": "cb9a8c37-dfbb-4a6f-9b33-c2dc85200f78"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\" Dear [Responsible's Name],\\n\\nI hope this message finds you well. I am John, an employee at XYZ Company.\\n\\nI would like to kindly request some annual leave, as I am planning to go on holiday. Could we perhaps discuss some dates that would be most suitable for both the team and the business?\\n\\nI greatly appreciate your understanding and look forward to your response.\\n\\nYours sincerely,\\nJohn\""
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "employee_response.content"
       ]
@@ -343,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "f65a0f80",
       "metadata": {
         "id": "f65a0f80"
@@ -367,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "516c5695",
       "metadata": {
         "id": "516c5695"
@@ -382,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "9befdb87",
       "metadata": {
         "id": "9befdb87"
@@ -396,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "fb694b8f",
       "metadata": {
         "id": "fb694b8f"
@@ -408,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "967aede3",
       "metadata": {
         "colab": {
@@ -419,21 +373,7 @@
         "outputId": "d71c07e6-6a87-47cc-fbae-838c41d904b3",
         "scrolled": true
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\" ``Subject : Réponse à la Demande de congé (Vacances)\\n\\nChère/Cher John,\\n\\nJe vous remercie de m'en toucher relativement à votre demande de congé. Je vous prie de préciser les dates précises que vous avez l'intention de faire l'usage de vos jours fériés, afin que nous puissions assurer une couverture adéquate pendant votre absence.\\n\\nJe me réjouis déjà de recevoir votre réponse.\\n\\nAvec mes meilleurs souhaits,\\n[Nom du manager]``\\n\\n[Translation: Subject: Response to Vacation Leave Request\\n\\nDear John,\\n\\nThank you for contacting me regarding your leave request. I kindly ask you to specify the exact dates you plan on taking off, so we can arrange adequate coverage during your absence.\\n\\nI look forward to your response.\\n\\nBest regards,\\n[Manager's Name]\""
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "manager_response.content"
       ]
