--- a/IT_Support_Chatbot/ITSupportChatbot.ipynb
+++ b/IT_Support_Chatbot/ITSupportChatbot.ipynb
@@ -1,29 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install --upgrade langchain==0.1.6\n",
-        "!pip install --upgrade langchain-community==0.0.19\n",
-        "!pip install --upgrade langchain-core==0.1.23\n",
-        "!pip install --upgrade faiss-cpu\n",
-        "!pip install --upgrade sentence-transformers\n",
-        "!pip install --upgrade langchain_aws"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -32,11 +11,10 @@
         "id": "lW-5ljUtwIa4",
         "outputId": "8b83919c-df7f-4d77-d293-1c2237de65f3"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: langchain==0.1.6 in /usr/local/lib/python3.11/dist-packages (0.1.6)\n",
             "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.11/dist-packages (from langchain==0.1.6) (6.0.2)\n",
@@ -316,26 +294,34 @@
             "\u001b[0mSuccessfully installed boto3-1.38.41 botocore-1.38.41 jmespath-1.0.1 langchain-core-0.3.66 langchain_aws-0.2.26 langsmith-0.4.1 s3transfer-0.13.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install --upgrade langchain==0.1.6\n",
+        "!pip install --upgrade langchain-community==0.0.19\n",
+        "!pip install --upgrade langchain-core==0.1.23\n",
+        "!pip install --upgrade faiss-cpu\n",
+        "!pip install --upgrade sentence-transformers\n",
+        "!pip install --upgrade langchain_aws"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "BM27yrM3WWJy"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "from google.colab import userdata\n",
         "os.environ[\"AWS_ACCESS_KEY_ID\"] = userdata.get('AWS_ACCESS_KEY_ID')\n",
         "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = userdata.get('AWS_SECRET_ACCESS_KEY')\n",
         "os.environ[\"AWS_DEFAULT_REGION\"] = userdata.get('AWS_DEFAULT_REGION')"
-      ],
-      "metadata": {
-        "id": "BM27yrM3WWJy"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "1x0rmwQcvThF"
       },
@@ -391,35 +377,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "XD8bXnCpwiyn"
+      },
+      "outputs": [],
       "source": [
         "# Function for generating LLM response\n",
         "def generate_response(input):\n",
         "    result = rag_chain.invoke(input)\n",
         "    return result"
-      ],
-      "metadata": {
-        "id": "XD8bXnCpwiyn"
-      },
-      "execution_count": 33,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "input = \"What are some tips for speeding up my slow laptop?\""
-      ],
+      "execution_count": 36,
       "metadata": {
         "id": "_nxBYocx6J5k"
       },
-      "execution_count": 36,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "input = \"What are some tips for speeding up my slow laptop?\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = generate_response(input)\n",
-        "print(response)"
-      ],
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -427,25 +410,42 @@
         "id": "zsZ1BvMs6RYi",
         "outputId": "7095a791-653d-4882-a7d9-0856a282f9e7"
       },
-      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             " Check for background processes consuming resources, update your operating system and drivers, remove unnecessary startup programs, and perform disk cleanup. Consider upgrading hardware if necessary.\n"
           ]
         }
+      ],
+      "source": [
+        "response = generate_response(input)\n",
+        "print(response)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "zSz0nI-J6Z7N"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
